feat: Integrate VC.png on Slide 11 with symbols and larger font
- Added VC.png diagram at top of Slide 11
- Added emoji symbols for each text box (🔐 🛡️ 📋 📝)
- Increased font sizes: h4 to 1.4rem, list items to 1.2rem
- Improved line-height to 2 for better readability
- Applied to both English and German versions
- Reorganized layout into 2x2 grid with proper spacing

--- a/de.html
+++ b/de.html
@@ -436,33 +436,39 @@
             <section>
                 <div class="slide-content">
                     <h2>Die Zukunft: Verifiable Credentials & Neue Standards</h2>
-                    <h3>Aktive Entwicklungen</h3>
-                    <div class="card card-primary">
-                        <h4>1. Verifiable Credentials für MCP</h4>
-                        <ul>
-                            <li>ToIP/DIF-Arbeitsgruppe (gestartet Sep 2025)</li>
-                            <li>IETF-Entwurf: OAuth DCR + Trusted Issuer Tokens</li>
-                            <li>Ziel: Kryptografisch nachweisbare Agenten-Identität</li>
-                            <li>Überbrückt MCP ↔ DataSpace-Vertrauensmodelle</li>
-                        </ul>
+                    <div class="svg-container">
+                        <img src="/VC.png" alt="Verifiable Credentials Architektur und Ablaufdiagramm" loading="lazy" />
                     </div>
                     <div class="grid grid-2 fragment">
+                        <div class="card card-primary">
+                            <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">🔐 Verifiable Credentials für MCP</h4>
+                            <ul style="font-size: 1.2rem; line-height: 2;">
+                                <li>ToIP/DIF-Arbeitsgruppe (gestartet Sep 2025)</li>
+                                <li>IETF-Entwurf: OAuth DCR + Trusted Issuer Tokens</li>
+                                <li>Kryptografisch nachweisbare Agenten-Identität</li>
+                                <li>Überbrückt MCP ↔ DataSpace-Vertrauensmodelle</li>
+                            </ul>
+                        </div>
                         <div class="card">
-                            <h4>2. MCP-Sicherheits-Standardisierung</h4>
-                            <ul>
+                            <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">🛡️ MCP-Sicherheits-Standardisierung</h4>
+                            <ul style="font-size: 1.2rem; line-height: 2;">
                                 <li>Cloud Security Alliance: modelcontextprotocol-security.io</li>
                                 <li>OWASP LLM Top 10 Integration</li>
                                 <li>Fokus: Prompt Injection, Tool-Vergiftung, RCE-Prävention</li>
                             </ul>
                         </div>
+                    </div>
+                    <div class="grid grid-2 fragment" style="margin-top: 1.5rem;">
                         <div class="card">
-                            <h4>3. DataSpace ISO-Standardisierung</h4>
-                            <ul>
+                            <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">📋 DataSpace ISO-Standardisierung</h4>
+                            <ul style="font-size: 1.2rem; line-height: 2;">
                                 <li>Eclipse/IDSA bewegt sich in Richtung internationaler Standard</li>
                                 <li>Breitere Akzeptanz außerhalb Europas</li>
                             </ul>
-                            <h4 style="margin-top: 1rem;">4. Natürlichsprachliche Verträge</h4>
-                            <ul>
+                        </div>
+                        <div class="card">
+                            <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">📝 Natürlichsprachliche Verträge</h4>
+                            <ul style="font-size: 1.2rem; line-height: 2;">
                                 <li>ODRL → Menschenlesbare Übersetzung</li>
                                 <li>MCP-Schnittstellen für Vertragsverhandlung</li>
                             </ul>
