--- a/index.html
+++ b/index.html
@@ -436,33 +436,39 @@
             <section>
                 <div class="slide-content">
                     <h2>The Future: Verifiable Credentials & Emerging Standards</h2>
-                    <h3>Active Developments</h3>
-                    <div class="card card-primary">
-                        <h4>1. Verifiable Credentials for MCP</h4>
-                        <ul>
-                            <li>ToIP/DIF working group (launched Sep 2025)</li>
-                            <li>IETF draft: OAuth DCR + Trusted Issuer Tokens</li>
-                            <li>Goal: Cryptographically provable agent identity</li>
-                            <li>Bridges MCP ↔ DataSpace trust models</li>
-                        </ul>
+                    <div class="svg-container">
+                        <img src="/VC.png" alt="Verifiable Credentials architecture and flow diagram" loading="lazy" />
                     </div>
                     <div class="grid grid-2 fragment">
+                        <div class="card card-primary">
+                            <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">🔐 Verifiable Credentials for MCP</h4>
+                            <ul style="font-size: 1.2rem; line-height: 2;">
+                                <li>ToIP/DIF working group (launched Sep 2025)</li>
+                                <li>IETF draft: OAuth DCR + Trusted Issuer Tokens</li>
+                                <li>Cryptographically provable agent identity</li>
+                                <li>Bridges MCP ↔ DataSpace trust models</li>
+                            </ul>
+                        </div>
                         <div class="card">
-                            <h4>2. MCP Security Standardization</h4>
-                            <ul>
+                            <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">🛡️ MCP Security Standardization</h4>
+                            <ul style="font-size: 1.2rem; line-height: 2;">
                                 <li>Cloud Security Alliance: modelcontextprotocol-security.io</li>
                                 <li>OWASP LLM Top 10 integration</li>
                                 <li>Focus: Prompt injection, tool poisoning, RCE prevention</li>
                             </ul>
                         </div>
+                    </div>
+                    <div class="grid grid-2 fragment" style="margin-top: 1.5rem;">
                         <div class="card">
-                            <h4>3. DataSpace ISO Standardization</h4>
-                            <ul>
+                            <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">📋 DataSpace ISO Standardization</h4>
+                            <ul style="font-size: 1.2rem; line-height: 2;">
                                 <li>Eclipse/IDSA moving toward international standard</li>
                                 <li>Broader adoption beyond Europe</li>
                             </ul>
-                            <h4 style="margin-top: 1rem;">4. Natural Language Contracts</h4>
-                            <ul>
+                        </div>
+                        <div class="card">
+                            <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">📝 Natural Language Contracts</h4>
+                            <ul style="font-size: 1.2rem; line-height: 2;">
                                 <li>ODRL → Human-readable translation</li>
                                 <li>MCP interfaces for contract negotiation</li>
                             </ul>
