fix: Reduce VC.png image size to 1/4
- Set height to 200px (1/4 of previous size)
- Added object-fit: contain for proper aspect ratio
- Applied to both English and German versions

--- a/index.html
+++ b/index.html
@@ -436,8 +436,8 @@
             <section>
                 <div class="slide-content">
                     <h2>The Future: Verifiable Credentials & Emerging Standards</h2>
-                    <div class="svg-container">
-                        <img src="/VC.png" alt="Verifiable Credentials architecture and flow diagram" loading="lazy" />
+                    <div class="svg-container" style="height: 200px; margin: 1rem 0;">
+                        <img src="/VC.png" alt="Verifiable Credentials architecture and flow diagram" loading="lazy" style="height: 100%; width: auto; object-fit: contain;" />
                     </div>
                     <div class="grid grid-2 fragment">
                         <div class="card card-primary">
