--- a/de.html
+++ b/de.html
@@ -436,8 +436,8 @@
             <section>
                 <div class="slide-content">
                     <h2>Die Zukunft: Verifiable Credentials & Neue Standards</h2>
-                    <div class="svg-container">
-                        <img src="/VC.png" alt="Verifiable Credentials Architektur und Ablaufdiagramm" loading="lazy" />
+                    <div class="svg-container" style="height: 200px; margin: 1rem 0;">
+                        <img src="/VC.png" alt="Verifiable Credentials Architektur und Ablaufdiagramm" loading="lazy" style="height: 100%; width: auto; object-fit: contain;" />
                     </div>
                     <div class="grid grid-2 fragment">
                         <div class="card card-primary">
