fix: Reposition VC.png to right of Verifiable Credentials card
- Changed layout to side-by-side grid (1fr 350px)
- VC.png now appears to right of first card
- Image width set to 350px for better proportion
- Applied to both English and German versions

--- a/de.html
+++ b/de.html
@@ -436,11 +436,8 @@
             <section>
                 <div class="slide-content">
                     <h2>Die Zukunft: Verifiable Credentials & Neue Standards</h2>
-                    <div class="svg-container" style="height: 200px; margin: 1rem 0;">
-                        <img src="/VC.png" alt="Verifiable Credentials Architektur und Ablaufdiagramm" loading="lazy" style="height: 100%; width: auto; object-fit: contain;" />
-                    </div>
-                    <div class="grid grid-2 fragment">
-                        <div class="card card-primary">
+                    <div style="display: grid; grid-template-columns: 1fr 350px; gap: 1.5rem; margin-bottom: 1.5rem;">
+                        <div class="card card-primary fragment">
                             <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">🔐 Verifiable Credentials für MCP</h4>
                             <ul style="font-size: 1.2rem; line-height: 2;">
                                 <li>ToIP/DIF-Arbeitsgruppe (gestartet Sep 2025)</li>
@@ -449,12 +446,24 @@
                                 <li>Überbrückt MCP ↔ DataSpace-Vertrauensmodelle</li>
                             </ul>
                         </div>
+                        <div class="svg-container fragment" style="height: auto; padding: 0.5rem;">
+                            <img src="/VC.png" alt="Verifiable Credentials Architektur und Ablaufdiagramm" loading="lazy" style="height: 100%; width: 100%; object-fit: contain;" />
+                        </div>
+                    </div>
+                    <div class="grid grid-2 fragment">
                         <div class="card">
                             <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">🛡️ MCP-Sicherheits-Standardisierung</h4>
                             <ul style="font-size: 1.2rem; line-height: 2;">
                                 <li>Cloud Security Alliance: modelcontextprotocol-security.io</li>
                                 <li>OWASP LLM Top 10 Integration</li>
                                 <li>Fokus: Prompt Injection, Tool-Vergiftung, RCE-Prävention</li>
+                            </ul>
+                        </div>
+                        <div class="card">
+                            <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">📋 DataSpace ISO-Standardisierung</h4>
+                            <ul style="font-size: 1.2rem; line-height: 2;">
+                                <li>Eclipse/IDSA bewegt sich in Richtung internationaler Standard</li>
+                                <li>Breitere Akzeptanz außerhalb Europas</li>
                             </ul>
                         </div>
                     </div>
