--- a/index.html
+++ b/index.html
@@ -436,11 +436,8 @@
             <section>
                 <div class="slide-content">
                     <h2>The Future: Verifiable Credentials & Emerging Standards</h2>
-                    <div class="svg-container" style="height: 200px; margin: 1rem 0;">
-                        <img src="/VC.png" alt="Verifiable Credentials architecture and flow diagram" loading="lazy" style="height: 100%; width: auto; object-fit: contain;" />
-                    </div>
-                    <div class="grid grid-2 fragment">
-                        <div class="card card-primary">
+                    <div style="display: grid; grid-template-columns: 1fr 350px; gap: 1.5rem; margin-bottom: 1.5rem;">
+                        <div class="card card-primary fragment">
                             <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">🔐 Verifiable Credentials for MCP</h4>
                             <ul style="font-size: 1.2rem; line-height: 2;">
                                 <li>ToIP/DIF working group (launched Sep 2025)</li>
@@ -449,12 +446,24 @@
                                 <li>Bridges MCP ↔ DataSpace trust models</li>
                             </ul>
                         </div>
+                        <div class="svg-container fragment" style="height: auto; padding: 0.5rem;">
+                            <img src="/VC.png" alt="Verifiable Credentials architecture and flow diagram" loading="lazy" style="height: 100%; width: 100%; object-fit: contain;" />
+                        </div>
+                    </div>
+                    <div class="grid grid-2 fragment">
                         <div class="card">
                             <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">🛡️ MCP Security Standardization</h4>
                             <ul style="font-size: 1.2rem; line-height: 2;">
                                 <li>Cloud Security Alliance: modelcontextprotocol-security.io</li>
                                 <li>OWASP LLM Top 10 integration</li>
                                 <li>Focus: Prompt injection, tool poisoning, RCE prevention</li>
+                            </ul>
+                        </div>
+                        <div class="card">
+                            <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">📋 DataSpace ISO Standardization</h4>
+                            <ul style="font-size: 1.2rem; line-height: 2;">
+                                <li>Eclipse/IDSA moving toward international standard</li>
+                                <li>Broader adoption beyond Europe</li>
                             </ul>
                         </div>
                     </div>
