--- a/index.html
+++ b/index.html
@@ -436,46 +436,50 @@
             <section>
                 <div class="slide-content">
                     <h2>The Future: Verifiable Credentials & Emerging Standards</h2>
-                    <div style="display: grid; grid-template-columns: 1fr 1fr 500px 1fr 1fr; grid-template-rows: auto auto; gap: 1.5rem; margin-bottom: 1.5rem;">
-                        <!-- MCP Creds (left) -->
-                        <div class="card card-primary fragment" style="grid-column: 1;">
-                            <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">🔐 Verifiable Credentials</h4>
+                    <!-- Top Row: 3 columns -->
+                    <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 1.5rem; margin-bottom: 1.5rem;">
+                        <!-- Verifiable Credentials (left) -->
+                        <div class="card card-primary fragment">
+                            <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">🔐 Verifiable Credentials for MCP</h4>
                             <ul style="font-size: 1.2rem; line-height: 2;">
                                 <li>ToIP/DIF working group (Sep 2025)</li>
                                 <li>OAuth DCR + Trusted Issuer Tokens</li>
                                 <li>Cryptographically provable identity</li>
-                                <li>Bridges MCP ↔ DataSpace</li>
-                            </ul>
-                        </div>
-                        <!-- MCP Security (center-left) -->
-                        <div class="card fragment" style="grid-column: 2;">
-                            <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">🛡️ MCP Security</h4>
-                            <ul style="font-size: 1.2rem; line-height: 2;">
-                                <li>Cloud Security Alliance</li>
-                                <li>OWASP LLM Top 10</li>
-                                <li>Focus: Prompt injection, tool poisoning, RCE</li>
+                                <li>Bridges MCP ↔ DataSpace trust models</li>
                             </ul>
                         </div>
                         <!-- VC Image (center) -->
-                        <div class="svg-container fragment" style="grid-column: 3; grid-row: 1 / 3; height: auto; padding: 1rem;">
+                        <div class="svg-container fragment" style="height: auto; padding: 1rem;">
                             <img src="/VC.png" alt="Verifiable Credentials architecture and flow diagram" loading="lazy" style="height: 100%; width: 100%; object-fit: contain;" />
                         </div>
-                        <!-- DataSpace (center-right) -->
-                        <div class="card fragment" style="grid-column: 4;">
-                            <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">📋 DataSpace ISO</h4>
+                        <!-- MCP Security (right) -->
+                        <div class="card fragment">
+                            <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">🛡️ MCP Security Standardization</h4>
                             <ul style="font-size: 1.2rem; line-height: 2;">
-                                <li>Eclipse/IDSA standard</li>
-                                <li>International adoption</li>
-                                <li>Beyond Europe</li>
+                                <li>Cloud Security Alliance</li>
+                                <li>OWASP LLM Top 10 integration</li>
+                                <li>Focus: Prompt injection, tool poisoning, RCE prevention</li>
                             </ul>
                         </div>
-                        <!-- Natural Language (right) -->
-                        <div class="card fragment" style="grid-column: 5;">
-                            <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">📝 Natural Language</h4>
+                    </div>
+                    <!-- Bottom Row: 2 columns -->
+                    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1.5rem;">
+                        <!-- DataSpace ISO/IEC -->
+                        <div class="card fragment">
+                            <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">📋 DataSpace ISO/IEC Standard</h4>
                             <ul style="font-size: 1.2rem; line-height: 2;">
-                                <li>ODRL translation</li>
-                                <li>Human-readable</li>
-                                <li>MCP interfaces</li>
+                                <li>Eclipse/IDSA moving toward international standard</li>
+                                <li>Broader adoption beyond Europe</li>
+                                <li>Standardization at ISO level</li>
+                            </ul>
+                        </div>
+                        <!-- Natural Language Contracts -->
+                        <div class="card fragment">
+                            <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">📝 Natural Language Contracts</h4>
+                            <ul style="font-size: 1.2rem; line-height: 2;">
+                                <li>ODRL → Human-readable translation</li>
+                                <li>MCP interfaces for contract negotiation</li>
+                                <li>Bridging technical and legal</li>
                             </ul>
                         </div>
                     </div>
