fix: Make VC.png match text block height and remove border
- Removed svg-container class to eliminate border
- Changed to flex container for proper centering
- Image now scales to fill available height
- Applied to both English and German versions

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                             </ul>
                         </div>
                         <!-- VC Image (center) -->
-                        <div class="svg-container fragment" style="height: auto; padding: 1rem;">
+                        <div style="display: flex; align-items: center; justify-content: center; fragment;" class="fragment">
                             <img src="/VC.png" alt="Verifiable Credentials architecture and flow diagram" loading="lazy" style="height: 100%; width: 100%; object-fit: contain;" />
                         </div>
                         <!-- MCP Security (right) -->
