fix: Make VC.png span both rows and flush top/bottom
- Changed to single 3-column, 2-row CSS grid
- VC.png image spans rows 1-3 (grid-row: 1 / 3)
- Image now flush at top and bottom with align-items: stretch
- All 4 cards properly positioned in grid
- Applied to both English and German versions

--- a/index.html
+++ b/index.html
@@ -436,9 +436,8 @@
             <section>
                 <div class="slide-content">
                     <h2>The Future: Verifiable Credentials & Emerging Standards</h2>
-                    <!-- Top Row: 3 columns -->
-                    <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 1.5rem; margin-bottom: 1.5rem;">
-                        <!-- Verifiable Credentials (left) -->
+                    <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; grid-template-rows: auto auto; gap: 1.5rem;">
+                        <!-- Verifiable Credentials (top-left) -->
                         <div class="card card-primary fragment">
                             <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">🔐 Verifiable Credentials for MCP</h4>
                             <ul style="font-size: 1.2rem; line-height: 2;">
@@ -448,11 +447,11 @@
                                 <li>Bridges MCP ↔ DataSpace trust models</li>
                             </ul>
                         </div>
-                        <!-- VC Image (center) -->
-                        <div style="display: flex; align-items: center; justify-content: center; fragment;" class="fragment">
+                        <!-- VC Image (center, spans 2 rows) -->
+                        <div style="display: flex; align-items: stretch; justify-content: center; grid-column: 2; grid-row: 1 / 3;" class="fragment">
                             <img src="/VC.png" alt="Verifiable Credentials architecture and flow diagram" loading="lazy" style="height: 100%; width: 100%; object-fit: contain;" />
                         </div>
-                        <!-- MCP Security (right) -->
+                        <!-- MCP Security (top-right) -->
                         <div class="card fragment">
                             <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">🛡️ MCP Security Standardization</h4>
                             <ul style="font-size: 1.2rem; line-height: 2;">
@@ -461,10 +460,7 @@
                                 <li>Focus: Prompt injection, tool poisoning, RCE prevention</li>
                             </ul>
                         </div>
-                    </div>
-                    <!-- Bottom Row: 2 columns -->
-                    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1.5rem;">
-                        <!-- DataSpace ISO/IEC -->
+                        <!-- DataSpace ISO/IEC (bottom-left) -->
                         <div class="card fragment">
                             <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">📋 DataSpace ISO/IEC Standard</h4>
                             <ul style="font-size: 1.2rem; line-height: 2;">
@@ -473,7 +469,7 @@
                                 <li>Standardization at ISO level</li>
                             </ul>
                         </div>
-                        <!-- Natural Language Contracts -->
+                        <!-- Natural Language Contracts (bottom-right) -->
                         <div class="card fragment">
                             <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">📝 Natural Language Contracts</h4>
                             <ul style="font-size: 1.2rem; line-height: 2;">
