--- a/de.html
+++ b/de.html
@@ -436,9 +436,8 @@
             <section>
                 <div class="slide-content">
                     <h2>Die Zukunft: Verifiable Credentials & Neue Standards</h2>
-                    <!-- Top Row: 3 columns -->
-                    <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 1.5rem; margin-bottom: 1.5rem;">
-                        <!-- Verifiable Credentials (left) -->
+                    <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; grid-template-rows: auto auto; gap: 1.5rem;">
+                        <!-- Verifiable Credentials (top-left) -->
                         <div class="card card-primary fragment">
                             <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">🔐 Verifiable Credentials für MCP</h4>
                             <ul style="font-size: 1.2rem; line-height: 2;">
@@ -448,11 +447,11 @@
                                 <li>Überbrückt MCP ↔ DataSpace-Vertrauensmodelle</li>
                             </ul>
                         </div>
-                        <!-- VC Image (center) -->
-                        <div style="display: flex; align-items: center; justify-content: center; fragment;" class="fragment">
+                        <!-- VC Image (center, spans 2 rows) -->
+                        <div style="display: flex; align-items: stretch; justify-content: center; grid-column: 2; grid-row: 1 / 3;" class="fragment">
                             <img src="/VC.png" alt="Verifiable Credentials Architektur und Ablaufdiagramm" loading="lazy" style="height: 100%; width: 100%; object-fit: contain;" />
                         </div>
-                        <!-- MCP Security (right) -->
+                        <!-- MCP Security (top-right) -->
                         <div class="card fragment">
                             <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">🛡️ MCP-Sicherheits-Standardisierung</h4>
                             <ul style="font-size: 1.2rem; line-height: 2;">
@@ -461,10 +460,7 @@
                                 <li>Fokus: Prompt Injection, Tool-Vergiftung, RCE-Prävention</li>
                             </ul>
                         </div>
-                    </div>
-                    <!-- Bottom Row: 2 columns -->
-                    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1.5rem;">
-                        <!-- DataSpace ISO/IEC -->
+                        <!-- DataSpace ISO/IEC (bottom-left) -->
                         <div class="card fragment">
                             <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">📋 DataSpace ISO/IEC Standard</h4>
                             <ul style="font-size: 1.2rem; line-height: 2;">
@@ -473,7 +469,7 @@
                                 <li>Standardisierung auf ISO-Ebene</li>
                             </ul>
                         </div>
-                        <!-- Natural Language Contracts -->
+                        <!-- Natural Language Contracts (bottom-right) -->
                         <div class="card fragment">
                             <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">📝 Natürlichsprachliche Verträge</h4>
                             <ul style="font-size: 1.2rem; line-height: 2;">
