fix: Make VC.png flush at top of first row
- Changed grid-template-rows from 'auto auto' to '1fr auto'
- First row now flexible and fills available space
- VC.png image flush to top (grid-row: 1 / 3)
- Bottom row maintains natural height for 2 cards
- Applied to both English and German versions

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
             <section>
                 <div class="slide-content">
                     <h2>The Future: Verifiable Credentials & Emerging Standards</h2>
-                    <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; grid-template-rows: auto auto; gap: 1.5rem;">
+                    <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; grid-template-rows: 1fr auto; gap: 1.5rem;">
                         <!-- Verifiable Credentials (top-left) -->
                         <div class="card card-primary fragment">
                             <h4 style="font-size: 1.4rem; margin-bottom: 1.2rem;">🔐 Verifiable Credentials for MCP</h4>
