--- a/de.html
+++ b/de.html
@@ -490,30 +490,31 @@
             <section>
                 <div class="slide-content">
                     <h2>Meine persönlichen Empfehlungen</h2>
-                    <div class="grid grid-2">
-                        <div class="card">
-                            <h3>Praktischer Fahrplan</h3>
-                            <ol>
-                                <li>Fokussieren Sie sich auf einen hochwertigen Use Case und kombinieren Sie MCP-Erlebnis mit DataSpace/API-Governance.</li>
-                                <li>Liefern Sie einsatzbereite Services (Dashboards, Alerts, Connectoren) statt reiner Datendumps.</li>
-                                <li>Automatisieren Sie Richtlinien- und Zustimmungsprozesse, damit Compliance im Ablauf steckt.</li>
+                    <div style="display: grid; grid-template-columns: 1fr 350px; gap: 2rem;">
+                        <div class="card" style="padding: 2rem;">
+                            <h3 style="font-size: 1.6rem; margin-bottom: 1.5rem;">Praktischer Fahrplan</h3>
+                            <ol style="font-size: 1.3rem; line-height: 2.2;">
+                                <li style="margin-bottom: 1.5rem;">
+                                    <strong>Fokussieren Sie sich auf einen hochwertigen Use Case</strong><br/>
+                                    <span style="font-size: 1.1rem; color: #a0a0a0;">Beispiel: Energiehandel auf DataSpace mit natürlicher Sprache via MCP</span>
+                                </li>
+                                <li style="margin-bottom: 1.5rem;">
+                                    <strong>Liefern Sie einsatzbereite Services</strong><br/>
+                                    <span style="font-size: 1.1rem; color: #a0a0a0;">Beispiel: Vorgefertigte Dashboards, Alerts, Connectoren → keine Rohdaten</span>
+                                </li>
+                                <li>
+                                    <strong>Automatisieren Sie Compliance</strong><br/>
+                                    <span style="font-size: 1.1rem; color: #a0a0a0;">Beispiel: Richtlinien- + Zustimmungsdurchsetzung im Workflow integriert</span>
+                                </li>
                             </ol>
                         </div>
-                        <div class="card">
-                            <h3>Was ich gelernt habe</h3>
-                            <ul>
-                                <li>Kunden kaufen Lösungen, keine Rohdaten.</li>
-                                <li>Transparente Governance schafft Vertrauen schneller als Verträge allein.</li>
-                            </ul>
+                        <div style="display: flex; align-items: center; justify-content: center;">
+                            <img src="/Contact.Matthias.Buchhorn.png" alt="Kontakt Matthias Buchhorn" loading="lazy" style="width: 100%; height: auto; border-radius: 10px;" />
                         </div>
                     </div>
-                    <div class="highlight-box fragment">
-                        <h3>Praxisnotiz</h3>
-                        <p>Datenmarktplätze funktionieren nur, wenn Sie Erkenntnisse und Integration gleich mitliefern.</p>
-                    </div>
-                    <div class="highlight-box fragment" style="margin-top: 1.5rem;">
-                        <h3>Verbinden Sie sich mit mir</h3>
-                        <p><a href="https://www.linkedin.com/in/mbuchhorn/" target="_blank" rel="noopener">linkedin.com/in/mbuchhorn</a></p>
+                    <div class="card card-success fragment" style="margin-top: 2rem; padding: 1.5rem;">
+                        <h3 style="font-size: 1.4rem; margin-bottom: 1rem;">💡 Wichtigste Erkenntnis</h3>
+                        <p style="font-size: 1.25rem; line-height: 1.8;"><strong>Kunden kaufen Lösungen, nicht Daten.</strong> Verpacken Sie Erkenntnisse und Integration zusammen—dort lebt der Wert.</p>
                     </div>
                 </div>
             </section>
