--- a/index.html
+++ b/index.html
@@ -490,30 +490,31 @@
             <section>
                 <div class="slide-content">
                     <h2>My Personal Recommendations</h2>
-                    <div class="grid grid-2">
-                        <div class="card">
-                            <h3>Practical Playbook</h3>
-                            <ol>
-                                <li>Anchor on one high-value use case and pair MCP UX with governed DataSpace/APIs.</li>
-                                <li>Deliver ready-to-use services (dashboards, alerts, connectors) instead of raw datasets.</li>
-                                <li>Automate policy and consent enforcement so compliance is built into the workflow.</li>
+                    <div style="display: grid; grid-template-columns: 1fr 350px; gap: 2rem;">
+                        <div class="card" style="padding: 2rem;">
+                            <h3 style="font-size: 1.6rem; margin-bottom: 1.5rem;">Practical Playbook</h3>
+                            <ol style="font-size: 1.3rem; line-height: 2.2;">
+                                <li style="margin-bottom: 1.5rem;">
+                                    <strong>Anchor on one high-value use case</strong><br/>
+                                    <span style="font-size: 1.1rem; color: #a0a0a0;">Example: Energy trading on DataSpace with natural language queries via MCP</span>
+                                </li>
+                                <li style="margin-bottom: 1.5rem;">
+                                    <strong>Deliver ready-to-use services</strong><br/>
+                                    <span style="font-size: 1.1rem; color: #a0a0a0;">Example: Pre-built dashboards, alerts, connectors → no raw data dumps</span>
+                                </li>
+                                <li>
+                                    <strong>Automate compliance</strong><br/>
+                                    <span style="font-size: 1.1rem; color: #a0a0a0;">Example: Policy + consent enforcement built into workflow</span>
+                                </li>
                             </ol>
                         </div>
-                        <div class="card">
-                            <h3>What I Learned</h3>
-                            <ul>
-                                <li>Clients buy outcomes, not data dumps.</li>
-                                <li>Transparent governance earns trust faster than contracts alone.</li>
-                            </ul>
+                        <div style="display: flex; align-items: center; justify-content: center;">
+                            <img src="/Contact.Matthias.Buchhorn.png" alt="Contact Matthias Buchhorn" loading="lazy" style="width: 100%; height: auto; border-radius: 10px;" />
                         </div>
                     </div>
-                    <div class="highlight-box fragment">
-                        <h3>Field Note</h3>
-                        <p>Data marketplaces succeed only when you package insight and integration along with the bytes.</p>
-                    </div>
-                    <div class="highlight-box fragment" style="margin-top: 1.5rem;">
-                        <h3>Connect with me</h3>
-                        <p><a href="https://www.linkedin.com/in/mbuchhorn/" target="_blank" rel="noopener">linkedin.com/in/mbuchhorn</a></p>
+                    <div class="card card-success fragment" style="margin-top: 2rem; padding: 1.5rem;">
+                        <h3 style="font-size: 1.4rem; margin-bottom: 1rem;">💡 Key Insight</h3>
+                        <p style="font-size: 1.25rem; line-height: 1.8;"><strong>Clients buy outcomes, not data.</strong> Package insight and integration together—that's where value lives.</p>
                     </div>
                 </div>
             </section>
